Linter-suggested refactorings